# app

./: LICENSE  README.md  pyproject.toml  settings.toml
app/: app.py
app/ext/: cli.py
app/ext/dashboard/: __init__.py  main.py
app/ext/dashboard/templates/: index.html
app/ext/database/: __init__.py  commands.py  models.py
app/ext/modulos/colaborador/: __init__.py  main.py  model.py
app/ext/modulos/colaborador/templates/: colaborador.html  colaboradores_create.html  colaboradores_update.html
app/ext/modulos/equipe/: __init__.py  main.py  model.py
app/ext/modulos/equipe/templates/: add_membro.html  detalhes.html  equipe.html  equipe_create.html  equipe_detalhes.html  equipe_update.html
app/ext/modulos/lancamento/: __init__.py  main.py
app/ext/modulos/lancamento/templates/: lancamento.html
app/ext/modulos/material/: __init__.py  main.py  model.py
app/ext/modulos/material/templates/: material.html  material_create.html  material_update.html  update.html
app/ext/routes/: colaborador.py  dashboard.py  equipe.py  material.py
app/ext/routes/templates/colaborador/: colaborador.html  update.html
app/ext/routes/templates/material/: update.html
app/static/: style.css
app/templates/: base.html  colaborador.html  details_equipe.html  material.html  update_colaborador.html  update_equipe.html  update_material.html
